syntax = "proto2";
package PROTOBUF;

// 创建游戏信息
message PB_CreateGame
{
	optional string 	game_name	= 1;	// 房间名字
	optional uint32 	game_mode    = 2;	// 房间模式 对应玩法枚举
	optional uint32 	consume_id	= 3;	// 消耗ID;
	optional uint32 	game_id 			= 4;	// 房间ID;
	optional uint32 	service_id  		= 5; 	// 服务器ID;
	optional uint32 	special_kind	= 6;	// 特殊玩法;
}

// 离开游戏信息;
message PB_LeaveGame
{
	optional uint32 role_id     = 1;	// 角色ID;
}

// 用户房间离线;
message PB_UserOffline
{
	optional uint32 role_id     = 1;	// 角色ID;
}

// 用户房间上线;
message PB_UserOnline
{
	optional uint32 role_id     = 1;	// 角色ID;
}



